--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^3.0.8",
     "webpack": "^4.28.4"
   },
   "scripts": {
